# control_quadrupeds

./: .gitignore  .gitmodules  README.md
hierarchical_optimization/: CMakeLists.txt
hierarchical_optimization/hierarchical_optimization/: CMakeLists.txt  package.xml
hierarchical_optimization/hierarchical_optimization/include/hierarchical_optimization/: Task.hpp
hierarchical_optimization/hierarchical_optimization/src/: HO.cpp  Task.cpp  test1.cpp
hierarchical_optimization/src/: Task.cpp  test1.cpp
model_predictive_control/: package.xml
src/MPC/: CMakeLists.txt  package.xml
src/control/hierarchical_optimization/: CMakeLists.txt  package.xml
src/control/hierarchical_optimization/include/hierarchical_optimization/: HO.hpp  Task.hpp
src/control/hierarchical_optimization/src/: HO.cpp  Task.cpp
src/control/hierarchical_optimization/test/: test1.cpp
src/control/model_predictive_control/: CMakeLists.txt  package.xml
src/control/model_predictive_control/include/model_predictive_control/: MPC.hpp  Robot.hpp
src/control/model_predictive_control/src/: MPC.cpp  Robot.cpp
src/control/model_predictive_control/test/: test_mpc.cpp
src/control/mpc_controller/: CMakeLists.txt  mpc_controller.xml  package.xml
src/control/mpc_controller/include/mpc_controller/: mpc_controller.hpp  mpc_publisher.hpp
src/control/mpc_controller/src/: mpc_controller.cpp  mpc_publisher.cpp
src/control/mpc_controller/test/: test_load_mpccontroller.cpp
src/control/pid_tuning/src/: pid_tuner.cpp
src/hierarchical_optimization/: CMakeLists.txt  package.xml
src/hierarchical_optimization/include/hierarchical_optimization/: Task.hpp
src/hierarchical_optimization/src/: HO.cpp  Task.cpp
src/hierarchical_optimization/test/: gtest.cpp  test1.cpp
src/model_predictive_control/: CMakeLists.txt  package.xml
src/model_predictive_control/include/model_predictive_control/: MPC.hpp  Robot.hpp
src/model_predictive_control/src/: MPC.cpp  Robot.cpp
src/mpc_controller/: package.xml
src/mpc_controller/include/mpc_controller/: mpc_controller.hpp
src/quadprog/: package.xml
src/quadprog/include/quadprog/: linear-algebra.hpp  qr-update.hpp  quadprog.hpp
src/quadprog/src/: linear-algebra.cpp  qr-update.cpp  quadprog.cpp
src/quadprog/test/: test.cpp
src/robot/robot_control/: CMakeLists.txt  package.xml
src/robot/robot_control/config/: solo12_effort_controller.yaml
src/robot/robot_control/config/gazebo/: solo12_controller_effort.yaml
src/robot/robot_gazebo/: CMakeLists.txt  package.xml
src/robot/robot_gazebo/launch/: solo12.launch.py
src/robot/robot_gazebo/scripts/: generate_heightmap_mesh.py
src/robot/robots/solo_description/: CMakeLists.txt  README.md  package.xml
src/robot/robots/solo_description/config/rviz/: standalone.rviz
src/robot/robots/solo_description/launch/: standalone.launch.py
src/robot/robots/solo_description/urdf/: solo12.urdf
src/robot/robots/solo_description/xacro/: leg.xacro  plane_with_restitution.urdf.xacro  solo12.urdf.xacro  solo12_gazebo.xacro  solo8.urdf.xacro
test_pkg/: CMakeLists.txt  test1.cpp
